# Rust_general_presentation

./: Cargo.toml  README.md
non-working/borrowing-err/: Cargo.toml
non-working/borrowing-err/src/: main.rs
non-working/fetch-data-err/: Cargo.toml
non-working/lifetime-err/: Cargo.toml
non-working/lifetime-err/src/: main.rs
non-working/mutability-err/: Cargo.toml
non-working/mutability-err/src/: main.rs
non-working/ownership-err/: Cargo.toml
non-working/pattern-matching-err/: Cargo.toml
non-working/pattern-matching-err/src/: main.rs
non-working/reference-err/: Cargo.toml
non-working/reference-err/src/: main.rs
non-working/slide11-err/: Cargo.toml
non-working/slide11-err/src/: main.rs
non-working/slide22-err/: Cargo.toml
non-working/slide22-err/src/: main.rs
non-working/slide23-err/: Cargo.toml
non-working/slide23-err/src/: main.rs
non-working/slide34-err/: Cargo.toml
non-working/slide34-err/src/: main.rs
non-working/slide53-err/: Cargo.toml
non-working/slide69-err/: Cargo.toml
non-working/slide78-err/: Cargo.toml
non-working/slide78-err/src/: main.rs
non-working/trait-err/: Cargo.toml
non-working/trait-err/src/: main.rs
working/array-get/: Cargo.toml
working/borrowing/: Cargo.toml
working/borrowing/src/: main.rs
working/fetch-data/: Cargo.toml
working/fetch-data/src/: main.rs
working/lifetime/: Cargo.toml
working/lifetime/src/: main.rs
working/lifetime1/: Cargo.toml
working/mutability/: Cargo.toml
working/mutability/src/: main.rs
working/pattern-matching/: Cargo.toml
working/reference/: Cargo.toml
working/slide11/: Cargo.toml
working/slide11/src/: main.rs
working/slide21/src/: main.rs
working/slide30/: Cargo.toml
working/slide32/: Cargo.toml
working/slide32/src/: main.rs
working/slide40/: Cargo.toml
working/slide40/src/: main.rs
working/slide41/: Cargo.toml
working/slide47/: Cargo.toml
working/slide57/: Cargo.toml
working/slide69/: Cargo.toml
working/slide78/: Cargo.toml
working/slide89/: Cargo.toml
working/struct/: Cargo.toml
working/trait/: Cargo.toml
(+6 files in other folders)
