[package]
name = "rust_general_presentation"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "hello-world/",

    "working/ownership",
    "working/borrowing",
    "working/mutability",
    "working/reference",
    "working/lifetime",
    "working/lifetime1",
    "working/pattern-matching",
    "working/struct",
    "working/trait",
    "working/fetch-data",
    "working/array-get",

    "non-working/ownership-err",
    "non-working/borrowing-err",
    "non-working/mutability-err",
    "non-working/reference-err",
    "non-working/lifetime-err",
    "non-working/pattern-matching-err",
    "non-working/trait-err",
    "non-working/fetch-data-err"
]

[workspace.dependencies]
serde_json = "1.0.128"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1